--- a/entrypoints/popup.html
+++ b/entrypoints/popup.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calorie Counter</title>
-  <link rel="stylesheet" href="./popup.css">
 </head>
 <body>
   <div id="app-container"></div>
-  <script type="module" src="./popup.tsx"></script>
+  <script type="module" src="../src/popup-app.tsx"></script>
 </body>
 </html>
